# ros_license_toolkit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING  CONTRIBUTING.md  NOTICE  README.md  action.yml  copyright  how_to_release.md  how_to_update.md  ignore_in_scan.json  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  mypy.yml  pytest.yml  pytest_long.yml  pytest_short.yml  release.yml  todo-to-issue.yml
data/: package_format1.xsd  package_format2.xsd  package_format3.xsd  spdx_list.txt
field-trials/: _perform_field_trials.bash  _repos.list  perform_field_trials.bash
src/ros_license_linter/: checks.py  common.py  copyright.py  license_tag.py  main.py  package.py  repo.py  ui_elements.py
src/ros_license_toolkit/: __init__.py  checks.py  common.py  copyright.py  license_file_referenced_check.py  license_in_code_check.py  license_tag.py  license_text_exists_check.py  main.py  package.py  repo.py  ui_elements.py
src/ros_license_toolkit/license_checks/: license_file_referenced_check.py  license_in_code_check.py  license_tag_exists_check.py  license_tag_is_spdx.py  license_text_exists_check.py  schema_check.py
test/: test_all_packages.py  test_checks.py  test_deep_package_folder.py  test_license_per_repo.py  test_license_per_repo_bsd3.py  test_license_per_repo_mit.py  test_pkg_has_code_disjoint.py  test_pkg_has_code_of_different_license.py  test_pkg_has_code_of_different_license_and_tag.py  test_pkg_has_code_of_different_license_and_wrong_tag.py  test_pkg_no_license.py  test_pkg_no_license_file.py  test_pkg_spdx_name.py  test_pkg_spdx_tag.py  test_pkg_unknown_license.py  test_pkg_with_license_and_file.py  test_pkg_with_multiple_licenses_no_source_files_tag.py  test_pkg_wrong_license_file.py  test_systemtest_all_packages.py  test_systemtest_license_per_repo.py  test_systemtest_separate_pkgs.py  test_unittest_license_tag.py
test/_test_data/copyright_file_contents/: test_pkg_has_code_disjoint  test_pkg_has_code_of_different_license_and_tag  test_pkg_spdx_name  test_pkg_spdx_tag  test_pkg_unknown_license  test_pkg_with_license_and_file
test/_test_data/test_pkg_both_tags_not_spdx/: BSD.LICENSE  code_with_MPL.py  package.xml
test/_test_data/test_pkg_both_tags_not_spdx_one_file_own/: LICENSE  package.xml
test/_test_data/test_pkg_code_has_no_license/: code_without_license.py  package.xml
test/_test_data/test_pkg_gpl_3_0_or_later/: package.xml
test/_test_data/test_pkg_has_code_disjoint/: package.xml
test/_test_data/test_pkg_has_code_of_different_license/: LICENSE  package.xml
test/_test_data/test_pkg_has_code_of_different_license_and_tag/: LICENSE_LGPL_2_1  package.xml
test/_test_data/test_pkg_has_code_of_different_license_and_wrong_tag/: package.xml
test/_test_data/test_pkg_ignore_readme_contents/: .scanignore  LICENSE  README.md  README.txt  code_with_license.py  package.xml
test/_test_data/test_pkg_name_not_in_spdx/: LICENSE  package.xml
test/systemtest/: _test_helpers.py  test_all_packages.py  test_copyright.py  test_documentation.py  test_license_per_repo.py  test_separate_pkgs.py
test/test_pkg_has_code_disjoint/: code_with_BSD.py
test/test_pkg_has_code_of_different_license_and_tag/: package.xml
test/test_pkg_no_license/: package.xml
test/test_pkg_no_license_file/: package.xml
test/test_pkg_spdx_name/: package.xml
test/test_pkg_spdx_tag/: package.xml
test/test_pkg_with_license_and_file/: package.xml
test/test_repo/: LICENSE
test/unittest/: test_copyright.py  test_license_tag.py  test_repo.py
(+54 files in other folders)
