<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_license_linter</name>
  <version>0.0.0</version>
  <description>Checks ROS packages for correct license declaration</description>
  <maintainer email="christian.henkel2@de.bosch.com">Christian Henkel</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>ros2pkg</exec_depend>
</package>
